data/derived/comb/progs/unify/prog8871.ml.out
Characters 8-19:
  let _ = digitsOfInt -2134;;
          ^^^^^^^^^^^
Error: This expression has type int -> int list
       but an expression was expected of type int
